--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <input
           type="hidden"
           name="_next"
-          value="http://127.0.0.1:5500/successfullySent.html"
+          value="https://nfescame.github.io/Simple-form-send/successfullySent.html"
         />
         <input
           type="hidden"
