--- a/successfullySent.html
+++ b/successfullySent.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <p>Email enviado com sucesso</p>
-    <a href="http://127.0.0.1:5500/index.html">Voltar</a>
+    <a href="https://nfescame.github.io/Simple-form-send/index.html">Voltar</a>
   </body>
 </html>
